--- a/styles/_game.scss
+++ b/styles/_game.scss
@@ -140,6 +140,36 @@
         @include translate(100%, -50%);
         top: 50%;
       }
+
+      @include bp(xs){
+        top: 0;
+        @include translate(0, -100%);
+        margin-top: -40px;
+        text-align: center;
+        left: 0;
+        width: 100%;
+        text-transform: uppercase;
+        font-size: 32px;
+        border: none;
+        background: transparent;
+        box-shadow: none;
+        letter-spacing: 2px;
+        padding: 0;
+
+        &:hover{
+          background: transparent;
+          box-shadow: none;
+          @include translate(0, -100%);
+        }
+
+        &.button-right{
+          bottom: 0;
+          top: auto;
+          @include translate(0, 100%);
+          margin-bottom: -50px;
+          margin-top: 0;
+        }
+      }
     }
   }
 
