--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4287,5 +4287,58 @@ header .socials ul li a:hover {
     display: none;
   }
 }
+@media (max-width: 360px) {
+  /* line 18, ../../styles/_mobile.scss */
+  .question-container .congressman-photo img,
+  .answer-container .congressman-photo img,
+  .results-container .congressman-photo img {
+    max-width: 145px;
+  }
+  /* line 22, ../../styles/_mobile.scss */
+  .question-container .question-container .question-choice .question-button,
+  .answer-container .question-container .question-choice .question-button,
+  .results-container .question-container .question-choice .question-button {
+    margin-top: -20px;
+    font-size: 28px;
+  }
+  /* line 26, ../../styles/_mobile.scss */
+  .question-container .question-container .question-choice .question-button.button-right,
+  .answer-container .question-container .question-choice .question-button.button-right,
+  .results-container .question-container .question-choice .question-button.button-right {
+    margin-bottom: -25px;
+    margin-top: 0;
+  }
+  /* line 32, ../../styles/_mobile.scss */
+  .question-container .answer-choice .congressman-infos,
+  .answer-container .answer-choice .congressman-infos,
+  .results-container .answer-choice .congressman-infos {
+    margin-top: 20px;
+    margin-bottom: 0;
+  }
+  /* line 36, ../../styles/_mobile.scss */
+  .question-container .answer-choice .answer-status,
+  .answer-container .answer-choice .answer-status,
+  .results-container .answer-choice .answer-status {
+    margin-bottom: 10px;
+  }
+  /* line 40, ../../styles/_mobile.scss */
+  .question-container .answer-choice .congressman-infos .congressman-party,
+  .answer-container .answer-choice .congressman-infos .congressman-party,
+  .results-container .answer-choice .congressman-infos .congressman-party {
+    font-size: 13px;
+  }
+
+  /* line 47, ../../styles/_mobile.scss */
+  .home .v-center .logo img {
+    height: 95px;
+  }
+  /* line 50, ../../styles/_mobile.scss */
+  .home .welcome-message-text {
+    padding: 0 20px;
+    font-size: 14px;
+    line-height: 16px;
+    margin-bottom: 10px;
+  }
+}
 
 /*# sourceMappingURL=index.css.map */
