--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3563,22 +3563,23 @@ button:active, .button:active {
 }
 /* line 36, ../../styles/_game.scss */
 .question-container .answer-choice .answer-status, .answer-container .answer-choice .answer-status, .results-container .answer-choice .answer-status {
-  margin-bottom: 20px;
+  margin-bottom: 35px;
   text-align: center;
+  position: relative;
   width: 100%;
   text-transform: uppercase;
   font-family: "phosphatesolid";
   letter-spacing: 1.2px;
   font-size: 25px;
 }
-/* line 45, ../../styles/_game.scss */
+/* line 46, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-infos, .answer-container .answer-choice .congressman-infos, .results-container .answer-choice .congressman-infos {
   margin-bottom: 10px;
   margin-top: 30px;
   text-align: center;
   width: 100%;
 }
-/* line 51, ../../styles/_game.scss */
+/* line 52, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-infos .congressman-name, .answer-container .answer-choice .congressman-infos .congressman-name, .results-container .answer-choice .congressman-infos .congressman-name {
   text-transform: uppercase;
   font-family: "phosphatesolid";
@@ -3586,26 +3587,26 @@ button:active, .button:active {
   font-size: 20px;
   display: block;
 }
-/* line 59, ../../styles/_game.scss */
+/* line 60, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-infos .congressman-party, .answer-container .answer-choice .congressman-infos .congressman-party, .results-container .answer-choice .congressman-infos .congressman-party {
   font-family: "Playfair Display", serif;
   letter-spacing: 1.2px;
   font-size: 16px;
 }
-/* line 66, ../../styles/_game.scss */
+/* line 67, ../../styles/_game.scss */
 .question-container .answer-choice .congressman-successrate, .answer-container .answer-choice .congressman-successrate, .results-container .answer-choice .congressman-successrate {
   font-family: "Playfair Display", serif;
   display: block;
   margin-top: 5px;
   opacity: .8;
 }
-/* line 74, ../../styles/_game.scss */
+/* line 75, ../../styles/_game.scss */
 .question-container .question-choice, .question-container .answer-container, .answer-container .question-choice, .answer-container .answer-container, .results-container .question-choice, .results-container .answer-container {
   text-align: center;
   width: 100%;
   position: relative;
 }
-/* line 79, ../../styles/_game.scss */
+/* line 80, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider, .question-container .answer-container .bg-slider, .answer-container .question-choice .bg-slider, .answer-container .answer-container .bg-slider, .results-container .question-choice .bg-slider, .results-container .answer-container .bg-slider {
   position: absolute;
   top: 50%;
@@ -3619,7 +3620,7 @@ button:active, .button:active {
   -o-transform: translate(0, -50%);
   transform: translate(0, -50%);
 }
-/* line 89, ../../styles/_game.scss */
+/* line 90, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider:after, .question-container .answer-container .bg-slider:after, .answer-container .question-choice .bg-slider:after, .answer-container .answer-container .bg-slider:after, .results-container .question-choice .bg-slider:after, .results-container .answer-container .bg-slider:after {
   content: '';
   width: calc(100% - 298px);
@@ -3634,7 +3635,7 @@ button:active, .button:active {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
-/* line 101, ../../styles/_game.scss */
+/* line 102, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider .bullet, .question-container .answer-container .bg-slider .bullet, .answer-container .question-choice .bg-slider .bullet, .answer-container .answer-container .bg-slider .bullet, .results-container .question-choice .bg-slider .bullet, .results-container .answer-container .bg-slider .bullet {
   display: inline-block;
   vertical-align: middle;
@@ -3654,19 +3655,19 @@ button:active, .button:active {
   background-position: center;
   cursor: pointer;
 }
-/* line 118, ../../styles/_game.scss */
+/* line 119, ../../styles/_game.scss */
 .question-container .question-choice .bg-slider .bullet.right, .question-container .answer-container .bg-slider .bullet.right, .answer-container .question-choice .bg-slider .bullet.right, .answer-container .answer-container .bg-slider .bullet.right, .results-container .question-choice .bg-slider .bullet.right, .results-container .answer-container .bg-slider .bullet.right {
   background-image: url("../images/arrow-right.svg");
   right: 69px;
   left: auto;
 }
 @media (max-width: 767px) {
-  /* line 79, ../../styles/_game.scss */
+  /* line 80, ../../styles/_game.scss */
   .question-container .question-choice .bg-slider, .question-container .answer-container .bg-slider, .answer-container .question-choice .bg-slider, .answer-container .answer-container .bg-slider, .results-container .question-choice .bg-slider, .results-container .answer-container .bg-slider {
     display: none;
   }
 }
-/* line 130, ../../styles/_game.scss */
+/* line 131, ../../styles/_game.scss */
 .question-container .question-choice .question-button, .question-container .answer-container .question-button, .answer-container .question-choice .question-button, .answer-container .answer-container .question-button, .results-container .question-choice .question-button, .results-container .answer-container .question-button {
   position: absolute;
   left: 0;
@@ -3677,7 +3678,7 @@ button:active, .button:active {
   top: 50%;
   margin-top: 0;
 }
-/* line 137, ../../styles/_game.scss */
+/* line 138, ../../styles/_game.scss */
 .question-container .question-choice .question-button.button-right, .question-container .answer-container .question-button.button-right, .answer-container .question-choice .question-button.button-right, .answer-container .answer-container .question-button.button-right, .results-container .question-choice .question-button.button-right, .results-container .answer-container .question-button.button-right {
   left: auto;
   right: 0;
@@ -3688,7 +3689,7 @@ button:active, .button:active {
   top: 50%;
 }
 @media (max-width: 767px) {
-  /* line 130, ../../styles/_game.scss */
+  /* line 131, ../../styles/_game.scss */
   .question-container .question-choice .question-button, .question-container .answer-container .question-button, .answer-container .question-choice .question-button, .answer-container .answer-container .question-button, .results-container .question-choice .question-button, .results-container .answer-container .question-button {
     top: 0;
     -webkit-transform: translate(0, -100%);
@@ -3707,7 +3708,7 @@ button:active, .button:active {
     letter-spacing: 2px;
     padding: 0;
   }
-  /* line 159, ../../styles/_game.scss */
+  /* line 160, ../../styles/_game.scss */
   .question-container .question-choice .question-button:hover, .question-container .answer-container .question-button:hover, .answer-container .question-choice .question-button:hover, .answer-container .answer-container .question-button:hover, .results-container .question-choice .question-button:hover, .results-container .answer-container .question-button:hover {
     background: transparent;
     box-shadow: none;
@@ -3716,7 +3717,7 @@ button:active, .button:active {
     -o-transform: translate(0, -100%);
     transform: translate(0, -100%);
   }
-  /* line 165, ../../styles/_game.scss */
+  /* line 166, ../../styles/_game.scss */
   .question-container .question-choice .question-button.button-right, .question-container .answer-container .question-button.button-right, .answer-container .question-choice .question-button.button-right, .answer-container .answer-container .question-button.button-right, .results-container .question-choice .question-button.button-right, .results-container .answer-container .question-button.button-right {
     bottom: 0;
     top: auto;
@@ -3728,52 +3729,52 @@ button:active, .button:active {
     margin-top: 0;
   }
 }
-/* line 176, ../../styles/_game.scss */
+/* line 177, ../../styles/_game.scss */
 .question-container .score, .question-container .quiz-progress, .question-container .results-score, .answer-container .score, .answer-container .quiz-progress, .answer-container .results-score, .results-container .score, .results-container .quiz-progress, .results-container .results-score {
-  margin-top: 48px;
+  margin-top: 30px;
 }
 @media (min-width: 768px) {
-  /* line 182, ../../styles/_game.scss */
+  /* line 183, ../../styles/_game.scss */
   .question-container.right-selected .gauche, .question-container.right-selected .droite, .answer-container.right-selected .gauche, .answer-container.right-selected .droite, .results-container.right-selected .gauche, .results-container.right-selected .droite {
     width: 50% !important;
   }
-  /* line 185, ../../styles/_game.scss */
+  /* line 186, ../../styles/_game.scss */
   .question-container.right-selected .question-choice, .answer-container.right-selected .question-choice, .results-container.right-selected .question-choice {
     text-align: right;
   }
-  /* line 188, ../../styles/_game.scss */
+  /* line 189, ../../styles/_game.scss */
   .question-container.right-selected .question-choice img.congressman-photo, .answer-container.right-selected .question-choice img.congressman-photo, .results-container.right-selected .question-choice img.congressman-photo {
     left: 0 !important;
   }
 }
-/* line 195, ../../styles/_game.scss */
+/* line 196, ../../styles/_game.scss */
 .question-container.right-selected .gauche, .answer-container.right-selected .gauche, .results-container.right-selected .gauche {
   opacity: .7;
 }
 @media (min-width: 768px) {
-  /* line 202, ../../styles/_game.scss */
+  /* line 203, ../../styles/_game.scss */
   .question-container.left-selected .gauche, .question-container.left-selected .droite, .answer-container.left-selected .gauche, .answer-container.left-selected .droite, .results-container.left-selected .gauche, .results-container.left-selected .droite {
     width: 50% !important;
   }
-  /* line 205, ../../styles/_game.scss */
+  /* line 206, ../../styles/_game.scss */
   .question-container.left-selected .question-choice, .answer-container.left-selected .question-choice, .results-container.left-selected .question-choice {
     text-align: left;
   }
-  /* line 208, ../../styles/_game.scss */
+  /* line 209, ../../styles/_game.scss */
   .question-container.left-selected .question-choice img.congressman-photo, .answer-container.left-selected .question-choice img.congressman-photo, .results-container.left-selected .question-choice img.congressman-photo {
     left: 0 !important;
   }
 }
-/* line 214, ../../styles/_game.scss */
+/* line 215, ../../styles/_game.scss */
 .question-container.left-selected .droite, .answer-container.left-selected .droite, .results-container.left-selected .droite {
   opacity: .7;
 }
-/* line 220, ../../styles/_game.scss */
+/* line 221, ../../styles/_game.scss */
 .question-container .question-choice img.congressman-photo .left-choice, .question-container .question-choice img.congressman-photo .right-choice, .answer-container .question-choice img.congressman-photo .left-choice, .answer-container .question-choice img.congressman-photo .right-choice, .results-container .question-choice img.congressman-photo .left-choice, .results-container .question-choice img.congressman-photo .right-choice {
   display: none;
 }
 @media (max-width: 767px) {
-  /* line 227, ../../styles/_game.scss */
+  /* line 228, ../../styles/_game.scss */
   .question-container .question-choice img.congressman-photo .left-choice, .answer-container .question-choice img.congressman-photo .left-choice, .results-container .question-choice img.congressman-photo .left-choice {
     position: absolute;
     display: block;
@@ -3791,7 +3792,7 @@ button:active, .button:active {
     letter-spacing: 1.2px;
     font-size: 32px;
   }
-  /* line 241, ../../styles/_game.scss */
+  /* line 242, ../../styles/_game.scss */
   .question-container .question-choice img.congressman-photo .right-choice, .answer-container .question-choice img.congressman-photo .right-choice, .results-container .question-choice img.congressman-photo .right-choice {
     position: absolute;
     display: block;
@@ -3810,7 +3811,7 @@ button:active, .button:active {
     font-size: 32px;
   }
 }
-/* line 260, ../../styles/_game.scss */
+/* line 261, ../../styles/_game.scss */
 .question-container.response .question-choice .validator, .answer-container.response .question-choice .validator, .results-container.response .question-choice .validator {
   transform: scale(1) translate(-50%, -50%);
   -moz-transform: scale(1) translate(-50%, -50%);
@@ -3818,7 +3819,7 @@ button:active, .button:active {
   -ms-transform: scale(1) translate(-50%, -50%);
 }
 @media (max-width: 767px) {
-  /* line 260, ../../styles/_game.scss */
+  /* line 261, ../../styles/_game.scss */
   .question-container.response .question-choice .validator, .answer-container.response .question-choice .validator, .results-container.response .question-choice .validator {
     height: 64px;
     width: 64px;
@@ -3827,58 +3828,58 @@ button:active, .button:active {
   }
 }
 @media (max-width: 767px) {
-  /* line 276, ../../styles/_game.scss */
+  /* line 277, ../../styles/_game.scss */
   .question-container.response .v-center, .answer-container.response .v-center, .results-container.response .v-center {
     margin-top: 50px;
   }
-  /* line 279, ../../styles/_game.scss */
+  /* line 280, ../../styles/_game.scss */
   .question-container.response .v-center .button, .answer-container.response .v-center .button, .results-container.response .v-center .button {
     margin-top: 90px;
   }
 }
 
-/* line 286, ../../styles/_game.scss */
+/* line 287, ../../styles/_game.scss */
 .answer-container .logo {
   display: none;
 }
 
-/* line 294, ../../styles/_game.scss */
+/* line 295, ../../styles/_game.scss */
 .results-container .results-score {
   margin-top: 10px;
 }
 
-/* line 299, ../../styles/_game.scss */
+/* line 300, ../../styles/_game.scss */
 .score, .quiz-progress, .results-score {
   color: white;
   font-family: "phosphatesolid";
   font-size: 45px;
   letter-spacing: 1px;
 }
-/* line 305, ../../styles/_game.scss */
+/* line 306, ../../styles/_game.scss */
 .score span, .quiz-progress span, .results-score span {
   font-size: 30px;
 }
 
-/* line 312, ../../styles/_game.scss */
+/* line 313, ../../styles/_game.scss */
 body.response-wrong .validator {
   background-image: url("../images/wrong.svg");
 }
-/* line 318, ../../styles/_game.scss */
+/* line 319, ../../styles/_game.scss */
 body.response-correct .validator {
   background-image: url("../images/correct.svg");
 }
 
-/* line 326, ../../styles/_game.scss */
+/* line 327, ../../styles/_game.scss */
 .results-container .logo img {
   height: 134px;
 }
 @media (max-width: 767px) {
-  /* line 325, ../../styles/_game.scss */
+  /* line 326, ../../styles/_game.scss */
   .results-container .logo {
     display: none;
   }
 }
-/* line 335, ../../styles/_game.scss */
+/* line 336, ../../styles/_game.scss */
 .results-container .validator {
   position: relative;
   height: 100px;
@@ -3892,8 +3893,37 @@ body.response-correct .validator {
   background-position: center;
   background-image: url("../images/correct.svg");
 }
-/* line 348, ../../styles/_game.scss */
+/* line 349, ../../styles/_game.scss */
 .results-container .validator.error {
+  background-image: url("../images/wrong.svg");
+}
+
+/* line 357, ../../styles/_game.scss */
+.answer-status-correct:after,
+.answer-status-incorrect:after {
+  content: '';
+  left: 50%;
+  position: absolute;
+  top: 100%;
+  margin-top: 8px;
+  height: 60px;
+  width: 60px;
+  z-index: 4;
+  border-radius: 50%;
+  background: white;
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("../images/correct.svg");
+  background-size: 20px;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+}
+/* line 377, ../../styles/_game.scss */
+.answer-status-correct.answer-status-incorrect:after,
+.answer-status-incorrect.answer-status-incorrect:after {
   background-image: url("../images/wrong.svg");
 }
 
